# gba-emu

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: apu.h  backup.h  bus.h  common.h  cpu.h  dma.h  gba.h  interrupt.h  io.h  keypad.h  ppu.h  rom.h  scheduler.h  timer.h
src/: apu.c  arm.c  backup.c  bus.c  cpu.c  dma.c  gba.c  interrupt.c  io.c  keypad.c  main.c  ppu.c  rom.c  scheduler.c  thumb.c  timer.c
